--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ PORT=
 DATABASE_URL="postgres://..."
 
 JWT_SECRET=your_jwt_secret
+
+POSTGRES_USER=your_username
+POSTGRES_PASSWORD=your_password
+POSTGRES_DB=your_database
